--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Dickens==1.0.1
 joblib==1.1.0
 kiwisolver==1.3.2
 llvmlite==0.37.0
+lxml==4.6.3
 matplotlib==3.4.3
 netifaces==0.11.0
 netml==0.1.4
@@ -16,6 +17,8 @@ pandas==1.1.5
 patsy==0.5.2
 Pillow==8.4.0
 plumbum==1.6.4
+psutil==5.8.0
+py==1.10.0
 pyod==0.8.9
 pyparsing==2.4.7
 python-dateutil==2.8.2
